# platform.core.appfw.aul-1

./: CMakeLists.txt  app_launcher.c  aul.manifest  aul.pc.in  aul.rule  launchpad_run  project.config
TC/unit/: Makefile  pkgname.h  tslist  utc_ApplicationFW_aul_app_get_pkgname_bypid_func.c  utc_ApplicationFW_aul_app_get_running_app_info_func.c  utc_ApplicationFW_aul_app_is_running_func.c  utc_ApplicationFW_aul_get_defapp_from_mime_func.c  utc_ApplicationFW_aul_get_mime_from_content_func.c  utc_ApplicationFW_aul_get_mime_from_file_func.c  utc_ApplicationFW_aul_launch_app_func.c  utc_ApplicationFW_aul_launch_argv_handler_func.c  utc_ApplicationFW_aul_launch_init_func.c  utc_ApplicationFW_aul_open_app_func.c  utc_ApplicationFW_aul_open_content_func.c  utc_ApplicationFW_aul_open_file_func.c  utc_ApplicationFW_aul_open_file_with_mimetype_func.c  utc_ApplicationFW_aul_resume_pid_func.c  utc_ApplicationFW_aul_set_defapp_with_mime_func.c  utc_ApplicationFW_aul_terminate_pid_func.c
agent/: CMakeLists.txt  daemon-manager-launch-agent.c  daemon-manager-release-agent.c
alias/: alias.ini
am_daemon/: CMakeLists.txt  ac_daemon.c  ac_status.c  amd_app_com.c  amd_app_com.h  amd_app_group.c  amd_app_group.h  amd_appinfo.c  amd_appinfo.h  amd_cgutil.c  amd_cgutil.h  amd_config.h  amd_cynara.c  amd_cynara.h  amd_key.c  amd_key.h  amd_launch.c  amd_launch.h  amd_main.c  amd_request.c  amd_request.h  amd_status.c  amd_status.h
am_session_agent/: CMakeLists.txt  agent.c  agent_config.h  sigchild.h
data/: appsvc_db.sql  aul_mime.sh  aul_service.sh  aul_service_test.sh  create_default_service.sh  mida_db.sql
data/service/: README
debian/: changelog  control  libaul-1-executable.install.in  libaul-1-executable.postinst  libaul-1.install.in  libaul-1.postinst  rules
feature/: preexec.h  preexec_list.txt  preexec_list.txt.in
include/: SLP_AUL_PG.h  access_control.h  app_com.h  app_launchpad_types.h  app_signal.h  app_sock.h  aul.h  aul_api.h  aul_app_com.h  aul_cmd.h  aul_dbus.h  aul_error.h  aul_proc.h  aul_rsc_mgr.h  aul_service.h  aul_sock.h  aul_socket.h  aul_svc.h  aul_svc_db.h  aul_svc_priv_key.h  aul_util.h  key.h  launch.h  menu_db_util.h  mida.h  miregex.h  perf.h  simple_util.h  tizen-transient-for-client-protocol.h
launchpad_src/: access_control.h  config.h  launchpad.c  sigchild.h  util_x.c  util_x.h
legacy/: preload.h  preload_list.txt  preload_list.txt.in
packaging/: ac.conf  ac.service  ac.socket  ac_user.service  amd_session_agent.service  amd_session_agent.socket  aul.changes  aul.manifest  aul.service  aul.spec  launchpad-preload.service  launchpad-preload.socket  launchpad-preload@.service  launchpad-preload_user.service  org.tizen.aul.syspopup.conf.in
src/: CMakeLists.txt  app_com.c  app_data.c  app_group.c  app_signal.c  app_sock.c  aul_dbus.c  aul_error.c  aul_path.c  aul_proc.c  aul_rsc_mgr.c  aul_rsc_mgr_internal.c  aul_rsc_mgr_internal.h  aul_sock.c  aul_socket.c  key.c  launch.c  launch_glib.c  launch_with_result.c  mida.c  mime.c  miregex.c  pkginfo.c  rsc_reader.c  service.c  service_db.c  simple_util.c  status.c  widget.c
test/: CMakeLists.txt  ac_daemon.c  app_launcher.c  app_test.c  appid2pid.c  aul_dbus.c  aul_dbus.h  aul_test.c  com.samsung.camera.service  dbusapp_test.c  launch_app.c  launch_debug.c  open_app.c
tool/: CMakeLists.txt  app_com_tool.c  app_group_info.c  app_launcher.c  aul_test.c  launch_app.c  launch_debug.c  open_app.c
weston_aul_plugin/: CMakeLists.txt  aul-plugin.c  aul.xml
