CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
SET(CMAKE_ALLOW_LOOSE_LOOP_CONSTRUCTS true)
SET(CMAKE_SKIP_BUILD_RPATH true)

PROJECT(aul C)
SET(VERSION ${FULLVER})
SET(VERSION_MAJOR ${MAJORVER})

SET(PREFIX ${CMAKE_INSTALL_PREFIX})
SET(EXEC_PREFIX "\${prefix}")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -Wall -fpic -fvisibility=hidden -Wl,-zdefs")

SET(AUL "aul")
SET(AUL_MODS "aul_mods")

ADD_DEFINITIONS("-DPREFIX=\"${CMAKE_INSTALL_PREFIX}\"")
ADD_DEFINITIONS("-DSHARE_PREFIX=\"${SHARE_INSTALL_PREFIX}/aul\"")

INCLUDE(FindPkgConfig)


ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(am_daemon)
ADD_SUBDIRECTORY(am_session_agent)
ADD_SUBDIRECTORY(agent)
ADD_SUBDIRECTORY(test)
