
STRING(REPLACE ";" " " EXTRA_CFLAGS "${PKGS_CFLAGS}")

SET(REL_AGENT daemon-manager-release-agent)
ADD_EXECUTABLE(${REL_AGENT} ${REL_AGENT}.c)
TARGET_LINK_LIBRARIES(${REL_AGENT} ${PKGS_LDFLAGS})
SET_TARGET_PROPERTIES(${REL_AGENT} PROPERTIES COMPILE_FLAGS "${EXTRA_CFLAGS}")

INSTALL(TARGETS ${REL_AGENT} DESTINATION bin)

SET(LAUNCH_AGENT daemon-manager-launch-agent)
ADD_EXECUTABLE(${LAUNCH_AGENT} ${LAUNCH_AGENT}.c)
TARGET_LINK_LIBRARIES(${LAUNCH_AGENT} ${PKGS_LDFLAGS})
SET_TARGET_PROPERTIES(${LAUNCH_AGENT} PROPERTIES COMPILE_FLAGS "${EXTRA_CFLAGS}")

INSTALL(TARGETS ${LAUNCH_AGENT} DESTINATION bin)
