SET(REL_AGENT "daemon-manager-release-agent")
SET(LAUNCH_AGENT "daemon-manager-launch-agent")

ADD_EXECUTABLE(${REL_AGENT} ${REL_AGENT}.c)
ADD_EXECUTABLE(${LAUNCH_AGENT} ${LAUNCH_AGENT}.c)

pkg_check_modules(AGENT_DEPS REQUIRED glib-2.0 gio-2.0)
FOREACH(FLAGS ${AGENT_DEPS_CFLAGS})
	SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${FLAGS}")
ENDFOREACH(FLAGS)

# Linker flags
SET(CMAKE_EXE_LINKER_FLAGS "-Wl,--as-needed")

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)

TARGET_LINK_LIBRARIES(${REL_AGENT} ${AGENT_DEPS_LDFLAGS} ${AUL_MODS})
TARGET_LINK_LIBRARIES(${LAUNCH_AGENT} ${AGENT_DEPS_LDFLAGS})

INSTALL(TARGETS ${REL_AGENT} DESTINATION bin)
INSTALL(TARGETS ${LAUNCH_AGENT} DESTINATION bin)
