# launchpad(old avatar) daemon
SET(AM_SESSION_AGENT "amd_session_agent")
ADD_EXECUTABLE(${AM_SESSION_AGENT} agent.c)

pkg_check_modules(SESSION_AGENT_DEPS REQUIRED
	glib-2.0
	gio-2.0
	dlog
	bundle
	rua
	dbus-1
	app-checker)
FOREACH(FLAGS ${SESSION_AGENT_DEPS_CFLAGS})
	SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${FLAGS}")
ENDFOREACH(FLAGS)

# Linker flags
SET(CMAKE_EXE_LINKER_FLAGS "-Wl,--as-needed")

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/legacy)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/feature)

TARGET_LINK_LIBRARIES(${AM_SESSION_AGENT} ${SESSION_AGENT_DEPS_LDFLAGS} ${AUL} ${AUL_MODS})

INSTALL(TARGETS ${AM_SESSION_AGENT} DESTINATION bin)
