# Test executables

SET(AUL_TEST "aul_test")
SET(LAUNCH_APP "launch_app")
SET(OPEN_APP "open_app")
SET(DBUSAPP_TEST "dbusapp_test")
SET(AUL_DBUS "aul_dbus")
SET(TEST_APP "test_app")
SET(APP_LAUNCHER "app_launcher")

pkg_check_modules(TOOLS_DEPS REQUIRED glib-2.0 dbus-1 dlog)
FOREACH(FLAGS ${TOOLS_DEPS_CFLAGS})
	SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${FLAGS}")
ENDFOREACH(FLAGS)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)

# Linker flags
SET(CMAKE_EXE_LINKER_FLAGS "-Wl,--as-needed")

ADD_EXECUTABLE(${AUL_TEST} aul_test.c)
ADD_EXECUTABLE(${LAUNCH_APP} launch_app.c)
ADD_EXECUTABLE(${OPEN_APP} open_app.c)
ADD_EXECUTABLE(${DBUSAPP_TEST} dbusapp_test.c)
ADD_EXECUTABLE(${AUL_DBUS} aul_dbus.c)
ADD_EXECUTABLE(${TEST_APP} app_test.c)
ADD_EXECUTABLE(${APP_LAUNCHER} app_launcher.c)

TARGET_LINK_LIBRARIES(${AUL_TEST} ${AUL} ${TOOLS_DEPS_LDFLAGS})
TARGET_LINK_LIBRARIES(${LAUNCH_APP} ${AUL} ${TOOLS_DEPS_LDFLAGS})
TARGET_LINK_LIBRARIES(${OPEN_APP} ${AUL} ${TOOLS_DEPS_LDFLAGS})
TARGET_LINK_LIBRARIES(${DBUSAPP_TEST} ${AUL} ${pkgs_LDFLAGS})
TARGET_LINK_LIBRARIES(${AUL_DBUS} ${AUL} ${TOOLS_DEPS_LDFLAGS})
TARGET_LINK_LIBRARIES(${TEST_APP} ${AUL} ${TOOLS_DEPS_LDFLAGS} )
TARGET_LINK_LIBRARIES(${APP_LAUNCHER} ${AUL} ${TOOLS_DEPS_LDFLAGS})

INSTALL(TARGETS aul_test DESTINATION bin)
INSTALL(TARGETS launch_app DESTINATION bin)
INSTALL(TARGETS open_app DESTINATION bin)
INSTALL(TARGETS app_launcher DESTINATION bin)

SET_TARGET_PROPERTIES(${TEST_APP} PROPERTIES COMPILE_FLAGS "-fpie")
